<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:stretchColumns="*">

    <ProgressBar
        android:id="@+id/menu_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <!-- first row of the table layout-->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/menuBedrijf"
            android:text="@string/menuBedrijf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14dp"
            />
        <TextView
            android:id="@+id/menuMedewerker"
            android:text="@string/menuMedewerker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14dp"
            />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/menuKlant"
            android:text="@string/menuKlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14dp"
            />
        <TextView
            android:id="@+id/menuObject"
            android:text="@string/menuObject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14dp"
            />
    </TableRow>
</TableLayout>
