<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".klanten.KlantenFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
        <TableRow>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/searchPostcodeWrapper"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/searchPostcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/searchPostcode"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/searchHuisnummerWrapper"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/searchHuisnummer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/searchHuisnummer"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/zoekKlantButton"
        android:background="@drawable/rounded_button_shape"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/inverse"
        android:text="@string/zoekButton"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/klantenRecycleView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>
